# phage_TnSeq_visualization

./: .gitignore  LICENSE  README.md  opt_gene_essentiality.csv  opt_sites.csv  pyproject.toml
examples/: custom_classifier_template.py  make_example.py  make_mock_inputs.py
mock_phynteny/: final-dataset.csv  mock_manifest.json
src/phage_tnseq_viz/: __init__.py  cli.py  colors.py  confidence.py  dataset.py  essentiality.py  gaps.py  genome.py  interactive.py  normalize.py  pipeline.py  plot.py  qc.py  tracks.py  transposon.py
tests/: test_cli.py  test_confidence.py  test_core.py  test_dataset.py  test_essentiality.py  test_gaps.py  test_normalize.py  test_pipeline.py  test_plot_data.py  test_qc.py
