[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phage-tnseq-viz"
version = "0.2.0"
description = "Phage Tn-Seq processing hand-off and genome maps with per-site read counts and essentiality overlays."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Jensen F." }]
keywords = ["phage", "tn-seq", "transposon", "genome", "visualization", "pharokka", "phold", "phynteny"]

dependencies = [
    "biopython>=1.80",
    "pygenomeviz>=1.0",
    "matplotlib>=3.5",
    "pyrodigal-gv>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "plotly>=5"]
interactive = ["plotly>=5"]

[project.scripts]
phage-tnseq-viz = "phage_tnseq_viz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phage_tnseq_viz = ["py.typed"]
